[tool.poetry]
name = "productionbot"
version = "0.2.4"
description = ""
authors = ["Dan <georgi.jolak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pymysql = "1.0.2"
aiodns = "3.0.0"
aiohttp = "3.8.3"
asyncpg = "0.27.0"
berserk-downstream = "0.11.9"
cairosvg = "2.5.2"
chardet = "5.1.0"
chess = "1.9.3"
colorama = "0.4.6"
coloredlogs = "15.0.1"
dateparser = "1.1.8"
discord = "2.3.0"
dill = "0.3.6"
emoji = "2.9.0"
ffmpeg = "1.4"
google-api-python-client = "2.65.0"
google-api-python-client-uritemplate = "1.4.2"
httplib2 = "0.21.0"
humanfriendly = "10.0"
icecream = "2.1.3"
language_data = "1.1"
lichess = "0.2.8"
matplotlib = "3.6.2"
names = "0.3.0"
nest-asyncio = "1.5.6"
numpy = "1.23.5"
oauth2client = "4.1.3"
opencv-python = "4.8.1.78"
pillow = "9.3.0"
psutil = "5.9.5"
psycopg2-binary = "2.9.9"
pytesseract = "0.3.10"
python-dotenv = "1.0.0"
python-telegram-bot = "20.3"
pytz = "2022.5"
requests = "2.28.0"
sqlalchemy = "2.0.23"
sqlalchemy-utils = "0.41.1"
surrogates = "1.0.2"
telebot = "0.0.4"
pynacl = "^1.5.0"
cython = "^0.29.32"
babel = "2.11.0"
apscheduler = "^3.10.1"
chess-com = "^2.0.6"
langcodes = "^3.3.0"
tqdm = "^4.65.0"
schedule = "^1.2.0"
websockets = "^11.0"



[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.core.masonry.api"
